QPC comms and EDM screens providing basic control. Vendor firmware bugs holding up further progress (setpoints)

--- a/digitelQpcApp/Db/Makefile
+++ b/digitelQpcApp/Db/Makefile
@@ -21,7 +21,8 @@ DB += digitelQpcTspDummy.template
 DB += digitelQpcIonpGroup.template
 DB += digitelQpcTspGroup.template
 DB += dummyIonp.template
-
+DB += digitelQPCController.template
+DB += vacuum-gamma-ion-pump.template
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
 # <anyname>_TEMPLATE = <templatename>
